[gd_scene load_steps=5 format=3 uid="uid://dy5afjyp6vkr8"]

[ext_resource type="Script" path="res://scenes/menus/settings_menu.gd" id="1_544s8"]
[ext_resource type="Texture2D" uid="uid://8r46jivoueb8" path="res://assets/bg.png" id="2_jylg5"]
[ext_resource type="Theme" uid="uid://cbs1608u20kwu" path="res://themes/theme.tres" id="3_qohli"]
[ext_resource type="AudioStream" uid="uid://c4ypmkekob5xk" path="res://assets/audio/effects/JDSherbert - Ultimate UI SFX Pack - Popup Close - 1.wav" id="4_av3kl"]

[node name="SettingsMenu" type="Node2D"]
script = ExtResource("1_544s8")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.552941, 0, 0.556863, 1)

[node name="Contents" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Contents"]
offset_left = -50.0
offset_top = -50.0
offset_right = 1130.0
offset_bottom = 1970.0
texture = ExtResource("2_jylg5")

[node name="Settings" type="Label" parent="Contents"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 301.5
offset_top = 405.527
offset_right = 778.5
offset_bottom = 504.527
grow_horizontal = 2
grow_vertical = 2
rotation = -0.139154
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 96
text = "Settings"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Contents"]
custom_minimum_size = Vector2(1080, 1920)
offset_right = 1080.0
offset_bottom = 1920.0
theme_override_constants/margin_top = 125
theme_override_constants/margin_bottom = 300

[node name="Title" type="Label" parent="Contents/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 120
text = "Donut Delight"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/MarginContainer"]
custom_minimum_size = Vector2(432, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 72

[node name="AudioSettings" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="AudioSettingsLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 60
text = "AUDIO"
horizontal_alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MasterLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer1"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 48
text = "Master Volume"

[node name="VolumeMaster" type="HSlider" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_qohli")
rounded = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 48
text = "Music Volume"

[node name="VolumeMusic" type="HSlider" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_qohli")
rounded = true

[node name="VBoxContainer3" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="EffectsLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 48
text = "SFX Volume"

[node name="VolumeEffects" type="HSlider" parent="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_qohli")
rounded = true

[node name="EffectsSettings" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="EffectsSettingsLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 60
text = "EFFECTS"
horizontal_alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScreenShakeLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer1"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 48
text = "Screen Shake"

[node name="ScreenShake" type="HSlider" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_qohli")
max_value = 10.0
rounded = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScreenFlashLabel" type="Label" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_qohli")
theme_override_font_sizes/font_size = 48
text = "Screen Flash"

[node name="ScreenFlashButton" type="Button" parent="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_qohli")
toggle_mode = true
text = "Enabled"

[node name="Back" type="Button" parent="Contents/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_qohli")
text = "Back"

[node name="Audio" type="Node" parent="."]

[node name="Dismiss" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_av3kl")
bus = &"Effects"

[connection signal="drag_ended" from="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer1/VolumeMaster" to="." method="_on_master_volume_drag_ended"]
[connection signal="drag_ended" from="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer2/VolumeMusic" to="." method="_on_music_volume_drag_ended"]
[connection signal="drag_ended" from="Contents/MarginContainer/VBoxContainer/AudioSettings/VBoxContainer3/VolumeEffects" to="." method="_on_effects_volume_drag_ended"]
[connection signal="drag_ended" from="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer1/ScreenShake" to="." method="_on_screen_shake_drag_ended"]
[connection signal="toggled" from="Contents/MarginContainer/VBoxContainer/EffectsSettings/VBoxContainer2/ScreenFlashButton" to="." method="_on_screen_flash_button_toggled"]
[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
